--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiers",
+  "name": "hfg2022",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -27,6 +27,9 @@
     "react-icons": "^4.2.0",
     "sass": "^1.32.8",
     "yup": "^0.32.9"
+  },
+  "engines": {
+    "node": "16.x"
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
