--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev:client": "next dev",
-    "dev:firebase": "firebase emulators:start --import=./.firebase-save --export-on-exit",
+    "dev": "next dev",
     "build": "next build",
-    "dev": "yarn dev:firebase & yarn dev:client",
     "deploy": "firebase deploy",
     "start": "next start -p $PORT"
   },
