--- a/tsconfig.json
+++ b/tsconfig.json
@@ -43,7 +43,8 @@
       "@/schemas/*": [
         "src/schemas/*"
       ]
-    }
+    },
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
