--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "1.3.0",
+    "@material-ui/core": "^4.12.3",
     "@tailwindcss/forms": "^0.2.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.20.1",
     "firebase": "^8.2.10",
-    "firebase-admin": "^9.6.0",
+    "firebase-admin": "^10.0.2",
     "jotai": "^0.16.0",
-    "next": "10.0.7",
+    "next": "^12.1.0",
     "next-connect": "^0.10.1",
     "nookies": "^2.4.0",
     "react": "17.0.1",
