--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "start": "next start -p $PORT"
   },
   "dependencies": {
+    "@emotion/core": "^10.1.1",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "@hookform/resolvers": "1.3.0",
     "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.5.0",
     "@tailwindcss/forms": "^0.2.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.20.1",
