--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
     "postcss": "^8.2.6",
     "tailwindcss": "^2.0.3",
     "typescript": "^4.2.3"
-  }
+  },
+  "cacheDirectories": [
+    ".next/cache"
+  ]
 }
